# deft

./: .gitignore  README.md  pyproject.toml
artifacts/motif_example/: results_df_samples2000_len100_motifTATA_seeds42-46_depths1-14.csv
conf/: baselines.yaml  config.yaml  config_deft_perf.yaml  config_human_non_tata.yaml  config_mpra.yaml  config_no_prior_knowledge.yaml  dl_baselines.yaml  tune_kmers_logistic.yaml
conf/baseline_model/: cart.yaml  logreg.yaml  oc1.yaml  xgboost.yaml
conf/dataset/: mpra_enhancers.yaml  polymerase.yaml  polymerase_big.yaml  promoters.yaml
conf/dl_model/: cnn_mpra_best.yaml  cnn_polymerase_best.yaml  cnn_promoters_best.yaml  transformer_mpra_best.yaml  transformer_polymerase_best.yaml  transformer_promoters_best.yaml
conf/feature_finder/: default.yaml
conf/featurizer/: kmer_count.yaml
conf/llm/: default.yaml
conf/llm_models/: generic_user.yaml  openai_gpt4o_mini.yaml
conf/selector/: rank.yaml  topk.yaml  tournament.yaml
conf/sklearn_model/: rf.yaml  xgboost.yaml
conf/splitting_criterion/: gini.yaml
conf/tree/: default.yaml
experiments/: deft_tree.py  run_baselines.py  run_deft_tree.py  run_dl_baselines.py  tune_kmers_logistic.py
notebooks/: fig1_motif_example.ipynb  fig4_ablations.ipynb  fig4_tree_based.ipynb  fig5_ablations.ipynb  fig5_tree_based.ipynb  get_deft_results.ipynb  inspect_deft_tree.ipynb  table1_results_blackboxes.ipynb  table2_deft_perf.ipynb  table3_halstead_deft_vs_deft_perf.ipynb
results/mpra_enhancers/: results_deft_multiple_seeds.csv
results/polymerase/: halstead_deft_vs_deft_perf.csv  (+5 more)
(+87 files in other folders)
